--- a/index.html
+++ b/index.html
@@ -6,12 +6,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+
   <article>
+
     <header>
       <h1>Super Epic Tile Layer</h1>
-      <p><strong>$35</strong></p>
-      <p><em>(in stock)</em><p>
+      <strong>$35</strong>
+      <em>(in stock)</em>
     </header>
 
+    <figure>
+      <img src="images/placeholder-4by3.svg" alt="box">
+    </figure>
+
+    <dl>
+      <dt>Ages</dt>
+      <dd>8+</dd>
+      <dt>Number players</dt>
+      <dd>2–5</dd>
+      <dt>Length</dt>
+      <dd>45 min</dd>
+    </dl>
+
+    <h2>Average Rating:</h2>
+    
 </body>
 </html>
