close some tags

--- a/index.html
+++ b/index.html
@@ -81,10 +81,12 @@
       </article>
 
       <article>
-        <h3>Natasha Stevens<h3>
+        <h3>Natasha Stevens</h3>
           <footer>— 2012-04-15 — 5/5</footer>
         <p>This game is bloody amazing! My mates and I totally love playing it.</p>
       </article>
+    </aside>
+  </article>
 
 </body>
 </html>
