--- a/index.html
+++ b/index.html
@@ -55,20 +55,21 @@
             <li>Tile Placement</li>
             <li>Worker Placement</li>
           </ol>
-          </dd>
+        </dd>
         <dt>Publisher</dt>
         <dd>AwesomeSpiel</dd>
         <dt>Designer</dt>
-        <dd>Kerstin Eichelberger<dd>
+        <dd>Kerstin Eichelberger</dd>
         <dt>Year</dt>
         <dd>2011</dd>
         <dt>Awards</dt>
         <dd>
-          <ol>
+          <ul>
             <li>2012 Spiel of the Year Winner</li>
             <li>2012 Golden Pyramid Game Award Winner</li>
             <li>2012 Geek Website Game of the Year Nominee</li>
-          </ol>
+          </ul>
+        </dd>
       </dl>
     </footer>
 
@@ -76,13 +77,13 @@
       <h2>Reviews</h2>
       <article>
         <h3>Thomas Schweitzer</h3>
-          <footer> — 2012-12-12 — 4/5</footer>
+        <footer> — 2012-12-12 — 4/5</footer>
         <p>Dieses Spiel ist super super-leichte, aber sehr lustig.</p>
       </article>
 
       <article>
         <h3>Natasha Stevens</h3>
-          <footer>— 2012-04-15 — 5/5</footer>
+        <footer>— 2012-04-15 — 5/5</footer>
         <p>This game is bloody amazing! My mates and I totally love playing it.</p>
       </article>
     </aside>
